styles/style.css
:root {
  --primary-font-family: "Gill sans";
  --secondary-font-family: "PT Mono", monospace;
  --primary-color: #2d2d2e;
  --secondary-color: #698474;
  --highlight-color: #f7f2f0;
}

body {
  background: var(--primary-color);
  border: 6px solid var(--highlight-color);
  color: var(--secondary-color);
}
.landing {
  margin-bottom: 100px;
}
.landing a {
  color: var(--secondary-color);
  cursor: crosshair;
  font-family: monospace;
  font-size: 200px;
  font-weight: 900;
  text-align: center;
  text-decoration: none;
}
.landing:hover {
  cursor: grabbing;
  text-shadow: -10px 10px 0px var(--highlight-color);
  transition: all 200ms ease-in-out;
}

ul {
  font-family: var(--secondary-font-family);
  font-size: 12px;
  font-style: italic;
  letter-spacing: 1px;
  list-style: none;
  margin: 30px;
  text-align: right;
  text-transform: uppercase;
}

li {
  display: inline;
  padding: 5px;
}

.menu a {
  color: var(--secondary-color);
  text-decoration: none;
}

.menu a:hover {
  color: var(--highlight-color);
  opacity: 20%;
}

h1 {
  color: var(--secondary-color);
  font-family: var(--primary-font-family);
  letter-spacing: 13px;
  margin-bottom: 100px;
  margin-top: 170px;
  text-transform: uppercase;
}

.container {
  max-width: 800px;
}

.second-group {
  margin-bottom: 200px;
}

.foot {
  background-color: var(--highlight-color);
  padding: 10px;
  margin: 0;
  margin-right: -100;
  margin-top: 200px;
}

.erc-ink,
.insta {
  color: var(--primary-color);
  font-family: var(--secondary-font-family);
  font-size: 13px;
  font-style: italic;
  opacity: 70%;
  text-decoration: none;
}
.erc-ink:hover,
.insta:hover {
  color: var(--secondary-color);
  opacity: 20%;
}

.insta {
  float: right;
}

h3 {
  font-family: var(--primary-font-family);
  font-size: 15px;
  font-style: italic;
  letter-spacing: 2px;
  line-height: 20px;
  text-align: center;
}

@media (max-width: 900px) {
  .container {
    max-width: 600px;
  }
}

